--- a/docs/.vitepress/i18n/pages/component.json
+++ b/docs/.vitepress/i18n/pages/component.json
@@ -6,6 +6,10 @@
                 {
                     "link": "/button",
                     "text": "Button"
+                },
+                {
+                    "link": "/card",
+                    "text": "Card"
                 }
             ]
         },
